Fixed a flex align error

--- a/sr101/styles/styles.css
+++ b/sr101/styles/styles.css
@@ -438,7 +438,6 @@ footer a:hover {
 .boosters div > p {
   width: 70%;
   margin: 0 10px auto 0;
-  align-self: top;
 }
 
 .boosters img {
